--- a/alakon-lang/analysis_options.yaml
+++ b/alakon-lang/analysis_options.yaml
@@ -13,18 +13,10 @@
 
 include: package:lints/recommended.yaml
 
-# Uncomment the following section to specify additional rules.
 
-# linter:
-#   rules:
-#     - camel_case_types
+linter:
+  rules:
+    - prefer_const_constructors
+    - sort_constructors_first
+    - sort_unnamed_constructors_first
 
-# analyzer:
-#   exclude:
-#     - path/to/excluded/files/**
-
-# For more information about the core and recommended set of lints, see
-# https://dart.dev/go/core-lints
-
-# For additional information about configuring this file, see
-# https://dart.dev/guides/language/analysis-options
